--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,45 @@ docopt
 docx2pdf
 docx2txt
 Flask
+awsebcli
+blessed
+botocore
+cement
+chardet
+click
+colorama
+docker-py
+dockerpty
+docopt
+docx2pdf
+docx2txt
+Flask
+Flask-Cors
+gunicorn
+importlib-metadata
+itsdangerous
+Jinja2
+jmespath
+MarkupSafe
+pathspec
+pdfminer3
+pycryptodome
+python-dateutil
+PyYAML
+requests
+semantic-version
+six
+sortedcontainers
+tabulate
+termcolor
+tqdm
+typing-extensions
+urllib3
+wcwidth
+websocket-client
+Werkzeug
+xlwt
+zipp
 gunicorn
 importlib-metadata
 itsdangerous
